--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "transpile": "babel js/wildproxy.js --out-dir build",
     "minify": "uglifyjs build/wildproxy.js -o build/wildproxy.min.js -c -m",
-    "build": "rimraf build && npm run transpile && npm run minify"
+    "build": "rimraf build && npm run transpile && npm run minify",
+    "dev": "babel js/wildproxy.js --watch --out-file build/wildproxy.min.js"
   },
   "husky": {
     "hooks": {
