--- a/package.json
+++ b/package.json
@@ -30,5 +30,7 @@
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10"
   },
-  "dependencies": {}
+  "dependencies": {
+    "url-parse": "^1.4.3"
+  }
 }
