--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ install: make install
 script:
 - make test
 - make build
+- mv $TRAVIS_BUILD_DIR/build $TRAVIS_BUILD_DIR/bin/
 - mv $TRAVIS_BUILD_DIR/codedeploy/* $TRAVIS_BUILD_DIR/bin/
 - cd $TRAVIS_BUILD_DIR/bin
 - zip -r latest *
